fixed the flip cards on safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -1156,7 +1156,7 @@ a {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(2, auto);
         align-items: center;
-        background-color:#3a3a3a;
+        
         border-radius: 10px;
         
     }
